--- a/estilos.css
+++ b/estilos.css
@@ -191,9 +191,9 @@ header {
 }
 
 .Sobre-Nosotros .contenedor-inicio{
-    height: 600px;
+    height: 1000px;
     
-    background-image: url(INICIO2.png);
+    background-image: url(Abstract\ Profile\ Photo\ Instagram\ Post.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
